# PandA-bambu

./: .clang-format  .clang-tidy  .codacy.yaml  .gitignore  .gitmodules  .travis.yml  AUTHORS  ChangeLog  INSTALL  INSTALL.md  Jenkinsfile  Makefile  Makefile.am  Makefile.init  NEWS  PandA-bambu.cppcheck  QTCreator-PandA-GitHub.files  QTCreator-PandA-GitHub.includes  README  README.md  circle.yml  clang-format-all.sh  configure.ac  dist_revision_hash  docker_install.sh  publications.bib
documentation/: Makefile.am  authors.doc  documentation.doc  graphs.doc  install.doc  license.doc  makefiles.doc  panda.doc  panda_sdk.doc  programming.doc  root.doc  svn.doc  tutorials.doc
documentation/bambu101/: README.md  bambu101.doc
documentation/dev101/: dev.doc
documentation/dev_guidelines/: documentation.doc  makefiles.doc  programming.doc
documentation/everest_summer_school/: README.md  bambu.ipynb
documentation/img/: Makefile.am
documentation/install/: install.doc  install_appimage.doc  install_docker.doc  install_os.doc  install_source.doc
documentation/tutorial_date_2022/: README.md  bambu.ipynb
documentation/tutorial_estec_2023/: README.md  bambu.ipynb
documentation/tutorial_fpl_2022/: README.md  bambu.ipynb
documentation/tutorial_hpca_2023/: README.md  bambu.ipynb
documentation/tutorial_ics_2021/: README.md  bambu.ipynb
documentation/tutorial_isc_2022/: README.md  bambu.ipynb
documentation/tutorial_isc_2023/: README.md  bambu.ipynb
documentation/tutorial_pact_2022/: README.md  bambu.ipynb
documentation/tutorial_pact_2023/: README.md  bambu.ipynb
documentation/web/: bambu.txt  bambu_install.txt  panda_download.txt  tutorial.txt
etc/: ChangeLog  Doxyfile  INSTALL  Makefile.am  NEWS  configure.ac  panda.am
etc/Appimage/: Makefile.am  README.md  Vagrantfile  script.sh
etc/clang_plugin/: CSROA.cpp  CSROA.hpp  CustomScalarReplacementOfAggregatesPass.cpp  CustomScalarReplacementOfAggregatesPass.hpp  ExpandMemOpsPass.hpp  GepiCanonicalizationPass.cpp  GepiCanonicalizationPass.hpp  HardekopfLin_AA.cpp  HardekopfLin_AA.hpp  Makefile.am  PtrIteratorSimplifyPass.hpp  SROA_LoopRotation.cpp  SROA_LoopRotation.h  SROA_LoopUnrollPass.cpp  TreeHeightReduction.hpp  bambuS2S.cpp  clang10.am  clang11.am  clang12.am  clang13.am  clang16.am  clang4.am  clang5.am  clang6.am  clang7.am  clang8.am  clang9.am  clang_version_symbol.hpp  clangvvd.am  debug_print.hpp  dumpGimple.cpp  fpga_callbacks.hpp  plugin_ASTAnalyzer.cpp  plugin_ASTAnnotate.cpp  plugin_CSROA.cpp  plugin_CSROA.hpp  plugin_GepiCanon.cpp  plugin_dumpGimpleEmpty.cpp  plugin_dumpGimpleSSA.cpp  plugin_dumpGimpleSSACpp.cpp  (+3 more)
etc/containers/: Dockerfile  Dockerfile.all  Dockerfile.all-dev  Dockerfile.appimage  Dockerfile.appimage-yosys  Dockerfile.colab  Dockerfile.cppcheck  Dockerfile.dev  Dockerfile.dev-yosys  Dockerfile.iverilog  Dockerfile.oracle.dev  Dockerfile.toolchain  Dockerfile.verilator  Dockerfile.yosys  Makefile.am  OpenROAD-dep-install.sh  build-and-push.sh
etc/devices/: Makefile.am  characterize_all_devices.sh  characterize_device.sh  copy_characterization.sh  fix_characterization.sh
etc/gcc_plugin/: Makefile.am  VRP_data.h  cfgexpand_4_5_2.c  dumpGimple.c  dumpGimpleCpp.c  dumpVRP_common.h  dumpVrp.c  ggc_clike_extern.h  ggc_clike_static.h  ggc_cpplike_extern.h  ggc_cpplike_static.h  patched-tree-vrp.454.c  patched-tree-vrp.463.c  patched-tree-vrp.472.c  patched-tree-vrp.480.c  plugin_dumpGimpleEmpty.c  plugin_dumpGimpleSSA.c  plugin_dumpGimpleSSAVRP.c  plugin_dumpRTL.c  plugin_includes.h  plugin_topfname.c  plugin_topfname.cpp
etc/latex_table_format/: Makefile.am  latex_format_bambu_results_xilinx.xml
etc/lib/: Makefile.am
etc/libbambu/: Makefile.am  README_PANDA.txt  assert.c  bambu_macros.h  byteswap.c  memcmp.c  memcpy.c  memmgr.c  memmove.c  memset.c  mul32.c  mul64.c  puts.c  read.c  write.c
etc/macros/: Makefile.am  R.m4  a3.m4  acx_blas.m4  acx_compile_warn.m4  acx_lapack.m4  acx_lapackpp.m4  acx_prog_clang.m4  acx_prog_gcc.m4  acx_windows_paths.m4  altera.m4  append.m4  atlas.m4  ax_blas.m4  ax_check_compile_flag.m4  ax_openmp.m4  boost_base.m4  boost_filesystem.m4  boost_iostreams.m4  boost_program_options.m4  boost_regex.m4  boost_system.m4  boost_time.m4  boost_wave.m4  c++11.m4  c++17.m4  clang_version.m4  clang_version10.m4  clang_version11.m4  clang_version12.m4  clang_version13.m4  clang_version16.m4  clang_version4.m4  clang_version5.m4  clang_version6.m4  clang_version7.m4  clang_version8.m4  clang_version9.m4  clang_versionvvd.m4  design_compiler.m4  (+21 more)
etc/scripts/: Makeall  Makefile.am  add_escape.sh  characterize.py  copyright_update.sh  cppcheck.sh  failure_aggregator.py  perf_diff.py  requirements.txt  test_installation.sh  test_panda.py
examples/: Makefile.am  example.sh  examples.doc  panda_bench_altera.sh  panda_bench_altera_list  panda_bench_hw.sh  panda_bench_hw_list  panda_bench_lattice.sh  panda_bench_lattice_list  panda_bench_nanoxplore.sh  panda_bench_nanoxplore_list  panda_bench_sim.sh  panda_bench_sim_list  panda_bench_xilinx_ise.sh  panda_bench_xilinx_ise_list  panda_bench_xilinx_vvd.sh  panda_bench_xilinx_vvd_list  panda_bench_yosys.sh  panda_bench_yosys_list  timing_closure_test.sh
examples/CHStone/: 5CSEMA5F31C6_10.0_O2_sdc_aligned_access.sh  5CSEMA5F31C6_10.0_O3_sdc.sh  5CSEMA5F31C6_15.0_O2_sdc_aligned_access.sh  5CSEMA5F31C6_15.0_O3_sdc.sh  5CSEMA5F31C6_O3_list  5SGXEA7N2F45C1_05.0_O2_sdc_aligned_access.sh  CHStone.am  (+94 more)
ext/: AUTHORS  Makefile.am  README  configure.ac
panda_unit/: Makefile.am  main_tests.cpp
src/: BambuParameter.cpp  BambuParameter.hpp  EucalyptusParameter.cpp  EucalyptusParameter.hpp  Makefile.am  Parameter.cpp  Parameter.hpp  SpiderParameter.cpp  SpiderParameter.hpp  bambu.am  bambu.cpp  bambu.doc  constant_strings.hpp  eucalyptus.am  eucalyptus.cpp  eucalyptus.doc  gecco.am  global_variables.cpp  global_variables.hpp  grizzly.am  koala.am  lemur.am  mongoose.am  spider.am  spider.cpp  src.doc  tree-panda-gcc-Parameter.cpp  tree-panda-gcc-Parameter.hpp  tree-panda-gcc.am  tree-panda-gcc.cpp  tucano.am  turtle.am  zebu.am
(+5944 files in other folders)
