#this file is documentation/Makefile.am
DIST_SUBDIRS = img

PRJ_DOC = \
           root.doc \
           panda.doc \
           authors.doc \
           license.doc \
           install.doc \
           panda_sdk.doc \
           svn.doc \
           makefiles.doc \
           programming.doc \
           documentation.doc  \
           tutorials.doc \
           graphs.doc\
           web/bambu_install.txt\
           web/bambu.txt\
           web/panda_download.txt\
           web/tutorial.txt\
           web/bambu.txt

DOX_TAGFILES = src src/utility
EXTRA_DIST = $(PRJ_DOC)

#do not touch the following line


